specs/archive/m12-build-plan-v1/evidence/phase-1-2-RED.json.stderr
⎯⎯⎯⎯⎯⎯ Failed Tests 19 ⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/m12-templates.test.mjs > m12 template files exist > workflows/plan-generate/templates/plan-template.md exists
AssertionError: Missing: /Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md

- Expected
+ Received

- true
+ false

 ❯ tests/m12-templates.test.mjs:15:12
     13|   test("workflows/plan-generate/templates/plan-template.md exists", ()…
     14|     const p = join(REPO_ROOT, "workflows", "plan-generate", "templates…
     15|     assert.ok(existsSync(p), `Missing: ${p}`);
       |            ^
     16|   });
     17| 

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/19]⎯

 FAIL  tests/m12-templates.test.mjs > m12 template files exist > workflows/tasks-generate/templates/tasks-template.md exists
AssertionError: Missing: /Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md

- Expected
+ Received

- true
+ false

 ❯ tests/m12-templates.test.mjs:20:12
     18|   test("workflows/tasks-generate/templates/tasks-template.md exists", …
     19|     const p = join(REPO_ROOT, "workflows", "tasks-generate", "template…
     20|     assert.ok(existsSync(p), `Missing: ${p}`);
       |            ^
     21|   });
     22| });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[2/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains ## Summary heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:30:21
     28| 
     29|   test("plan-template.md contains ## Summary heading", () => {
     30|     const content = readFileSync(planPath, "utf8");
       |                     ^
     31|     assert.ok(content.includes("## Summary"), "plan-template.md must c…
     32|   });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[3/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains ## Technical Context heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:35:21
     33| 
     34|   test("plan-template.md contains ## Technical Context heading", () =>…
     35|     const content = readFileSync(planPath, "utf8");
       |                     ^
     36|     assert.ok(content.includes("## Technical Context"), "plan-template…
     37|   });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[4/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains ## Constitution Check heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:40:21
     38| 
     39|   test("plan-template.md contains ## Constitution Check heading", () =…
     40|     const content = readFileSync(planPath, "utf8");
       |                     ^
     41|     assert.ok(content.includes("## Constitution Check"), "plan-templat…
     42|   });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[5/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains F, Q, S clause groups for 21-clause coverage
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:45:21
     43| 
     44|   test("plan-template.md contains F, Q, S clause groups for 21-clause …
     45|     const content = readFileSync(planPath, "utf8");
       |                     ^
     46|     const hasF = content.includes("Framework Principles") || content.i…
     47|     const hasQ = content.includes("Quality Principles") || content.inc…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[6/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains ## Project Structure heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:54:21
     52| 
     53|   test("plan-template.md contains ## Project Structure heading", () =>…
     54|     const content = readFileSync(planPath, "utf8");
       |                     ^
     55|     assert.ok(content.includes("## Project Structure"), "plan-template…
     56|   });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[7/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains ## Implementation Steps heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:59:21
     57| 
     58|   test("plan-template.md contains ## Implementation Steps heading", ()…
     59|     const content = readFileSync(planPath, "utf8");
       |                     ^
     60|     assert.ok(content.includes("## Implementation Steps"), "plan-templ…
     61|   });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[8/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains ## F10 Anti-Over-Engineering Gate heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:64:21
     62| 
     63|   test("plan-template.md contains ## F10 Anti-Over-Engineering Gate he…
     64|     const content = readFileSync(planPath, "utf8");
       |                     ^
     65|     assert.ok(
     66|       content.includes("## F10 Anti-Over-Engineering Gate") || content…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[9/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains ## Verification Mapping heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:71:21
     69| 
     70|   test("plan-template.md contains ## Verification Mapping heading", ()…
     71|     const content = readFileSync(planPath, "utf8");
       |                     ^
     72|     assert.ok(content.includes("## Verification Mapping"), "plan-templ…
     73|   });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[10/19]⎯

 FAIL  tests/m12-templates.test.mjs > plan-template.md contains all required sections > plan-template.md contains F10 4-question gate table columns
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/plan-generate/templates/plan-template.md'
 ❯ tests/m12-templates.test.mjs:76:21
     74| 
     75|   test("plan-template.md contains F10 4-question gate table columns", …
     76|     const content = readFileSync(planPath, "utf8");
       |                     ^
     77|     const hasThreat = content.includes("real threat") || content.inclu…
     78|     const hasCover = content.includes("Existing cover") || content.inc…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[11/19]⎯

 FAIL  tests/m12-templates.test.mjs > tasks-template.md contains all required elements > tasks-template.md contains Setup phase heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md'
 ❯ tests/m12-templates.test.mjs:92:21
     90| 
     91|   test("tasks-template.md contains Setup phase heading", () => {
     92|     const content = readFileSync(tasksPath, "utf8");
       |                     ^
     93|     assert.ok(
     94|       content.includes("Phase 1: Setup") || content.includes("## Phase…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[12/19]⎯

 FAIL  tests/m12-templates.test.mjs > tasks-template.md contains all required elements > tasks-template.md contains Foundational phase heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md'
 ❯ tests/m12-templates.test.mjs:99:21
     97| 
     98|   test("tasks-template.md contains Foundational phase heading", () => {
     99|     const content = readFileSync(tasksPath, "utf8");
       |                     ^
    100|     assert.ok(
    101|       content.includes("Phase 2: Foundational") || content.includes("#…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[13/19]⎯

 FAIL  tests/m12-templates.test.mjs > tasks-template.md contains all required elements > tasks-template.md contains User Story phase pattern
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md'
 ❯ tests/m12-templates.test.mjs:106:21
    104| 
    105|   test("tasks-template.md contains User Story phase pattern", () => {
    106|     const content = readFileSync(tasksPath, "utf8");
       |                     ^
    107|     assert.ok(
    108|       content.includes("User Story") || content.includes("US"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[14/19]⎯

 FAIL  tests/m12-templates.test.mjs > tasks-template.md contains all required elements > tasks-template.md contains Polish phase heading
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md'
 ❯ tests/m12-templates.test.mjs:113:21
    111| 
    112|   test("tasks-template.md contains Polish phase heading", () => {
    113|     const content = readFileSync(tasksPath, "utf8");
       |                     ^
    114|     assert.ok(
    115|       content.includes("Polish") || content.includes("Cross-Cutting"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[15/19]⎯

 FAIL  tests/m12-templates.test.mjs > tasks-template.md contains all required elements > tasks-template.md documents [P] parallel marker convention
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md'
 ❯ tests/m12-templates.test.mjs:120:21
    118| 
    119|   test('tasks-template.md documents [P] parallel marker convention', (…
    120|     const content = readFileSync(tasksPath, "utf8");
       |                     ^
    121|     assert.ok(content.includes("[P]"), "tasks-template.md must documen…
    122|   });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[16/19]⎯

 FAIL  tests/m12-templates.test.mjs > tasks-template.md contains all required elements > tasks-template.md documents FR mapping per task convention
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md'
 ❯ tests/m12-templates.test.mjs:125:21
    123| 
    124|   test("tasks-template.md documents FR mapping per task convention", (…
    125|     const content = readFileSync(tasksPath, "utf8");
       |                     ^
    126|     assert.ok(
    127|       content.includes("FR:") || content.includes("FR mapping") || con…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[17/19]⎯

 FAIL  tests/m12-templates.test.mjs > tasks-template.md contains all required elements > tasks-template.md documents ## Stage N block syntax
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md'
 ❯ tests/m12-templates.test.mjs:132:21
    130| 
    131|   test("tasks-template.md documents ## Stage N block syntax", () => {
    132|     const content = readFileSync(tasksPath, "utf8");
       |                     ^
    133|     assert.ok(
    134|       content.includes("## Stage") || content.includes("Stage N") || c…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[18/19]⎯

 FAIL  tests/m12-templates.test.mjs > tasks-template.md contains all required elements > tasks-template.md documents (stage:N, depends:...) annotation format
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/templates/tasks-template.md'
 ❯ tests/m12-templates.test.mjs:139:21
    137| 
    138|   test("tasks-template.md documents (stage:N, depends:...) annotation …
    139|     const content = readFileSync(tasksPath, "utf8");
       |                     ^
    140|     assert.ok(
    141|       content.includes("stage:") && content.includes("depends:"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[19/19]⎯

